# safety-supervisor

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: COMPLIANCE.md  HARA_ASS_SEooC_001.md  SRS_TRACEABILITY.md
include/types/: Platform_Types.h
sbom/: safety-supervisor-0.9.2.spdx.json
src/m7_rtos/bsw/: OtaRollback.c  OtaRollback.h
src/m7_rtos/bsw/csm/: Csm.c  Csm.h
src/m7_rtos/bsw/dem/: Dem.c  Dem.h
src/m7_rtos/bsw/e2e/: E2E.c  E2E.h
src/m7_rtos/bsw/memmap/: MemMap.h
src/m7_rtos/bsw/wdgm/: WdgM.c  WdgM.h
src/m7_rtos/cdd/ipc_ringbuffer/: IPC_RingBuffer.c  IPC_RingBuffer.h
src/m7_rtos/os/: Mpu_S32G_M7.c  Mpu_S32G_M7.h  Sbst.c  Sbst.h  startup_s32g_m7.c
src/m7_rtos/rte/: Rte_SafetyArbitrator.h  Rte_SafetyArbitrator_Stubs.c
src/m7_rtos/swc/swc_safe_state_mgr/: SwcSafeStateMgr.c  SwcSafeStateMgr.h
src/m7_rtos/swc/swc_safety_arbitrator/: SwcSafetyArbitrator.c
src/m7_rtos/swc/swc_vehicle_dynamics/: SwcVehicleDynamics.c  SwcVehicleDynamics.h
src/qnx_a53/app_idps/: app_idps.c
tests/: test_main.c
tools/: cppcheck_suppressions.txt  generate_sbom.py  s32g_m7_safety.ld
